@@ -33,6 +33,7 @@
 - clarify multiple mounts description.
 - gaurd against incorrect umount return.
 - update man page autofs(8) for systemd.
+- dont pass sloppy option for other than nfs mounts.
 
 04/06/2014 autofs-5.1.0
 =======================
